wrote objects and a for loop

--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <title>Multiple Choice Questions</title>
   </head>
   <body>
-    <button>Start</button>
+    <button id="btn">Start</button>
     <h2>Score:</h2>
     <div id="container"></div>
+    <script src="script.js"></script>
   </body>
 </html>
