--- a/index.html
+++ b/index.html
@@ -4,12 +4,23 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>Multiple Choice Questions</title>
   </head>
   <body>
-    <button id="btn">Start</button>
-    <h2>Score:</h2>
-    <div id="container"></div>
+    <h1>Quiz</h1>
+    <div id="container">
+      <button id="start">Start</button>
+      <div id="container-quiz" class="hide"></div>
+      <div id="quiz">Questions</div>
+      <div id="answer-list">
+        <button id="choice">Choice 1</button>
+        <button id="choice">Choice 2</button>
+        <button id="choice">choice 3</button>
+        <button id="choice">Choice 4</button>
+      </div>
+    </div>
+
     <script src="script.js"></script>
   </body>
 </html>
