added timing and next questions function

--- a/index.html
+++ b/index.html
@@ -9,16 +9,12 @@
   </head>
   <body>
     <h1>Quiz</h1>
+    <p id="timer"></p>
     <div id="container">
       <button id="start">Start</button>
       <div id="container-quiz" class="hide"></div>
       <div id="quiz">Questions</div>
-      <div id="answer-list">
-        <button id="choice">Choice 1</button>
-        <button id="choice">Choice 2</button>
-        <button id="choice">choice 3</button>
-        <button id="choice">Choice 4</button>
-      </div>
+      <div id="answer-list"></div>
     </div>
 
     <script src="script.js"></script>
